file: Initialize sort to order to default

If get_attributes_for_default_sort_type() returns FALSE,
nautilus_file_get_default_sort_type() will return garbage, as retval
will remain uninitialized. This commit initializes it by default to the
default GSettings value.

Fixes https://gitlab.gnome.org/GNOME/nautilus/issues/794